--- a/index.html
+++ b/index.html
@@ -153,19 +153,19 @@ footer { background-color: var(--color-primario); color: var(--color-texto); tex
   <h2>Tratamientos</h2>
   <div class="tratamientos">
     <div class="item" onclick="abrirModal('modal-individual')">
-      <img src="iconos/terapia_individual.svg" alt="Terapia Individual">
+      <img src="iconos/terapia_individual.png" alt="Terapia Individual">
       <h3>Terapia Individual</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-pareja')">
-      <img src="iconos/terapia_pareja.svg" alt="Terapia de Pareja">
+      <img src="iconos/terapia_pareja.png" alt="Terapia de Pareja">
       <h3>Terapia de Pareja</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-familiar')">
-      <img src="iconos/asesoramiento_familiar.svg" alt="Asesoramiento Familiar">
+      <img src="iconos/asesoramiento_familiar.png" alt="Asesoramiento Familiar">
       <h3>Asesoramiento Familiar</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-mindfulness')">
-      <img src="iconos/mindfulness.svg" alt="Mindfulness">
+      <img src="iconos/mindfulness.png" alt="Mindfulness">
       <h3>Mindfulness</h3>
     </div>
   </div>
