--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body { font-family: 'Quicksand', sans-serif; background-color: var(--color-fondo
 
 header {
   background: linear-gradient(rgba(248,200,216,0.5), rgba(248,200,216,0.5)),
-    url('https://images.unsplash.com/photo-1607746882042-944635dfe10e?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
+    url('https://images.pexels.com/photos/5699456/pexels-photo-5699456.jpeg') center/cover no-repeat;
   height: 40vh;
   display:flex; justify-content:center; align-items:center; text-align:center; color: var(--color-fondo);
   position: relative;
