--- a/index.html
+++ b/index.html
@@ -200,27 +200,27 @@ footer {
   <h2 data-aos="fade-up">Talleres</h2>
   <div class="talleres">
     <div class="item" data-aos="fade-up" onclick="abrirModal('modal-timidez')">
-      <img src="imagenes/timidez1.png" class="icon" alt="Supera la Timidez">
+      <img src="iconos/timidez1.png" class="icon" alt="Supera la Timidez">
       <h3>Supera la Timidez</h3>
     </div>
     <div class="item" data-aos="fade-up" data-aos-delay="100" onclick="abrirModal('modal-pareja-taller')">
-      <img src="imagenes/pareja1.png" class="icon" alt="Mejora tu relación de pareja">
+      <img src="iconos/pareja1.png" class="icon" alt="Mejora tu relación de pareja">
       <h3>Mejora tu relación de pareja</h3>
     </div>
     <div class="item" data-aos="fade-up" data-aos-delay="200" onclick="abrirModal('modal-ruptura')">
-      <img src="imagenes/ruptura1.png" class="icon" alt="Supera una ruptura">
+      <img src="iconos/ruptura1.png" class="icon" alt="Supera una ruptura">
       <h3>Supera una ruptura</h3>
     </div>
     <div class="item" data-aos="fade-up" data-aos-delay="300" onclick="abrirModal('modal-ansiedad')">
-      <img src="imagenes/ansiedad1.png" class="icon" alt="Aprende a gestionar la ansiedad">
+      <img src="iconos/ansiedad1.png" class="icon" alt="Aprende a gestionar la ansiedad">
       <h3>Aprende a gestionar la ansiedad</h3>
     </div>
     <div class="item" data-aos="fade-up" data-aos-delay="400" onclick="abrirModal('modal-rallo')">
-      <img src="imagenes/rallo1.png" class="icon" alt="Pienso, luego me rallo">
+      <img src="iconos/rallo1.png" class="icon" alt="Pienso, luego me rallo">
       <h3>Pienso, luego me rallo</h3>
     </div>
     <div class="item" data-aos="fade-up" data-aos-delay="500" onclick="abrirModal('modal-valorat')">
-      <img src="imagenes/valorat1.png" class="icon" alt="Valora-T">
+      <img src="iconos/valorat1.png" class="icon" alt="Valora-T">
       <h3>Valora-T</h3>
     </div>
   </div>
@@ -249,6 +249,7 @@ footer {
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-individual')">&times;</span>
     <h2>Terapia Individual</h2>
+	<img src="imagenes/terapia_individual.png" alt="Terapia Individual">
     <p>Sesiones personalizadas para trabajar tu desarrollo personal y emocional.</p>
   </div>
 </div>
@@ -256,6 +257,7 @@ footer {
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-pareja')">&times;</span>
     <h2>Terapia de Pareja</h2>
+	<img src="imagenes/terapia_pareja.png" alt="Terapia de Pareja">
     <p>Apoyo profesional para mejorar la comunicación y fortalecer la relación.</p>
   </div>
 </div>
@@ -263,6 +265,7 @@ footer {
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-familiar')">&times;</span>
     <h2>Asesoramiento Familiar</h2>
+	<img src="imagenes/asesoramiento_familiar.png" alt="Asesoramiento Familiar">
     <p>Herramientas para resolver conflictos y mejorar la convivencia familiar.</p>
   </div>
 </div>
@@ -270,6 +273,7 @@ footer {
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-mindfulness')">&times;</span>
     <h2>Mindfulness</h2>
+	<img src="imagenes/mindfulness.png" alt="Mindfulness">
     <p>Técnicas de atención plena para reducir el estrés y mejorar tu bienestar.</p>
   </div>
 </div>
