--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
 /* Header */
 header {
   background:linear-gradient(rgba(248,200,216,0.5), rgba(248,200,216,0.5)),
-    url('https://images.unsplash.com/photo-1607746882042-944635dfe10e?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
+    url('https://images.pexels.com/photos/5699456/pexels-photo-5699456.jpeg') center/cover no-repeat;
   height:40vh;
   display:flex;
   justify-content:center;
