--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Inma Psicóloga</title>
 
+<!-- Tipografías -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Quicksand:wght@300;400;500&display=swap" rel="stylesheet">
+
+<!-- AOS CSS -->
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
 <style>
@@ -18,6 +21,7 @@
   --color-gris-claro: #fdf5f7;
 }
 
+/* Global */
 *{box-sizing:border-box;margin:0;padding:0}
 body {
   font-family:'Quicksand',sans-serif;
@@ -27,11 +31,11 @@ body {
   scroll-behavior:smooth;
 }
 
-/* Header premium */
+/* Header radical */
 header {
   position: relative;
-  height:50vh;
-  min-height:300px;
+  height: 45vh;
+  min-height:320px;
   overflow: hidden;
   display:flex;
   justify-content:center;
@@ -41,20 +45,19 @@ header {
 }
 header::before {
   content:"";
-  position:absolute;
-  top:0; left:0;
+  position:absolute; top:0; left:0;
   width:100%; height:100%;
-  background: rgba(248,200,216,0.15);
-  backdrop-filter: brightness(1.5) blur(5px);
+  background: linear-gradient(to bottom, rgba(248,200,216,0.7), rgba(255,255,255,0.15));
   z-index:1;
+  backdrop-filter: blur(4px);
 }
 header img.bg-parallax {
-  position:absolute;
-  top:0; left:0;
+  position:absolute; top:0; left:0;
   width:100%; height:100%;
   object-fit:cover;
   z-index:0;
-  transition: transform 0.2s ease-out;
+  transition: transform 0.2s ease-out, filter 0.3s ease;
+  filter: brightness(0.6);
 }
 header .content {
   position: relative;
@@ -62,28 +65,28 @@ header .content {
   max-width:800px;
   padding:0 1rem;
 }
-header h1{
+header h1 {
   font-family:'Playfair Display',serif;
-  font-size:4rem;
+  font-size:3.5rem;
   font-weight:700;
   margin-bottom:.6rem;
-  text-shadow: 4px 4px 20px rgba(0,0,0,0.85);
+  text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 4px 12px rgba(0,0,0,0.7);
 }
-header p{
-  font-size:1.6rem;
+header p {
+  font-size:1.4rem;
   margin-bottom:1rem;
-  text-shadow: 3px 3px 16px rgba(0,0,0,0.75);
+  text-shadow: 0 0 6px rgba(0,0,0,0.8), 0 3px 8px rgba(0,0,0,0.7);
 }
-header .boton{
+header .boton {
   background:var(--color-boton);
-  padding:.7rem 1.6rem;
+  padding:.8rem 1.8rem;
   border-radius:50px;
   color:#fff;
   text-decoration:none;
   font-weight:500;
   transition: all 0.3s ease, transform 0.3s ease;
 }
-header .boton:hover{
+header .boton:hover {
   background:var(--color-acento);
   transform: translateY(-3px) scale(1.05);
 }
@@ -115,14 +118,15 @@ nav a:hover{
 /* Secciones */
 section{
   margin-bottom:2rem;
-  padding:1.8rem;
+  padding:2rem;
   background:#fff;
   border-radius:10px;
   box-shadow:0 2px 6px rgba(0,0,0,.06);
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
 section h2{
   font-family:'Playfair Display',serif;
-  font-size:1.8rem;
+  font-size:2rem;
   margin-bottom:1rem;
   text-align:center;
 }
@@ -133,17 +137,17 @@ section h2{
   gap: 1rem;
   justify-items: center;
 }
-.tratamientos { grid-template-columns: repeat(4, 1fr); }
-.talleres { grid-template-columns: repeat(6, 1fr); }
+.tratamientos { grid-template-columns: repeat(4,1fr); }
+.talleres { grid-template-columns: repeat(6,1fr); }
 @media(max-width:900px){
-  .tratamientos { grid-template-columns: repeat(2, 1fr); }
-  .talleres { grid-template-columns: repeat(2, 1fr); }
+  .tratamientos { grid-template-columns: repeat(2,1fr); }
+  .talleres { grid-template-columns: repeat(2,1fr); }
 }
 @media(max-width:600px){
   .tratamientos, .talleres { grid-template-columns: 1fr; }
 }
 
-/* Cards hover y glow con iconos flotantes */
+/* Cards */
 .item {
   background:var(--color-gris-claro);
   border-radius:12px;
@@ -156,79 +160,57 @@ section h2{
 }
 .item:hover {
   transform:translateY(-10px) scale(1.08) rotate(-1deg);
-  box-shadow:0 16px 32px rgba(244,166,177,0.45), 0 0 40px rgba(244,166,177,0.35);
+  box-shadow:0 14px 28px rgba(244,166,177,0.3),0 0 30px rgba(244,166,177,0.2);
+  filter:brightness(1.05);
 }
 .item img.icon {
   width:60px; height:60px;
   object-fit:contain;
   margin-bottom:.5rem;
+  animation: floatIcon 3s ease-in-out infinite alternate;
   transition: transform 0.3s ease, filter 0.3s ease;
 }
-.item:hover img.icon {
-  animation: floatIcon 2s ease-in-out infinite alternate;
+.item img.icon:hover {
   transform: scale(1.25) rotate(-5deg);
-  filter: drop-shadow(0 0 10px rgba(244,166,177,0.85));
+  filter: drop-shadow(0 0 6px rgba(244,166,177,0.7));
 }
 @keyframes floatIcon{
   0%{ transform: translateY(0);}
-  50%{ transform: translateY(-8px);}
+  50%{ transform: translateY(-6px);}
   100%{ transform: translateY(0);}
 }
 
-/* Botones */
-.boton {
-  display:inline-block;
-  transition: transform 0.3s ease, box-shadow 0.4s ease, filter 0.3s ease;
-}
-.boton:hover {
-  transform: scale(1.1) rotate(-1deg);
-  box-shadow: 0 6px 18px rgba(244,166,177,0.6), 0 0 22px rgba(255,182,193,0.5);
-}
+/* Botón */
+.boton { display:inline-block; transition: transform 0.3s ease, box-shadow 0.4s ease, filter 0.3s ease; }
+.boton:hover { transform: scale(1.1) rotate(-1deg); box-shadow:0 6px 18px rgba(244,166,177,0.6),0 0 20px rgba(255,182,193,0.4); }
 
-/* Modales premium */
+/* Modales */
 .modal {
   display:none;
-  position:fixed;
-  top:0; left:0;
+  position:fixed; top:0; left:0;
   width:100%; height:100%;
-  background:rgba(0,0,0,.65);
+  background:rgba(0,0,0,.5);
   z-index:100;
   align-items:center;
   justify-content:center;
   padding:1rem;
   opacity:0;
-  transition: opacity 0.4s ease;
+  transition: opacity 0.3s ease;
 }
-.modal[aria-hidden="false"] {
-  display:flex;
-  opacity:1;
-}
+.modal[aria-hidden="false"] { display:flex; opacity:1; }
 .modal-contenido {
   background:#fff;
-  border-radius:12px;
+  border-radius:10px;
   padding:1.6rem;
   max-width:600px;
   width:100%;
   position:relative;
-  transform: scale(0.9);
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
+  transform: scale(0.95);
+  transition: transform 0.3s ease;
 }
-.modal[aria-hidden="false"] .modal-contenido{
-  transform: scale(1);
-  box-shadow:0 20px 60px rgba(0,0,0,0.35);
-}
-.modal-contenido img {
-  width:100%; height:auto;
-  border-radius:8px;
-  margin-bottom:1rem;
-}
-.cerrar {
-  position:absolute;
-  right:12px; top:8px;
-  font-size:1.8rem;
-  cursor:pointer;
-  transition: color 0.2s ease;
-}
+.modal[aria-hidden="false"] .modal-contenido { transform: scale(1);}
+.modal-contenido img { width:100%; height:auto; border-radius:8px; margin-bottom:1rem;}
+.cerrar { position:absolute; right:12px; top:8px; font-size:1.6rem; cursor:pointer; transition: color 0.2s ease;}
 .cerrar:hover{color:var(--color-acento);}
 
 /* Contacto */
@@ -236,10 +218,7 @@ form input, form textarea {
   width:100%; padding:.8rem; margin-bottom:.9rem;
   border:1px solid #d1d1d1; border-radius:8px;
 }
-form input:focus, form textarea:focus{
-  border-color: var(--color-acento);
-  outline:none;
-}
+form input:focus, form textarea:focus { border-color: var(--color-acento); outline:none; }
 form button {
   background:var(--color-boton); color:#fff;
   padding:.75rem 1.25rem;
@@ -247,10 +226,7 @@ form button {
   cursor:pointer;
   transition: transform 0.2s ease, background 0.3s ease;
 }
-form button:hover{
-  background:var(--color-acento);
-  transform: scale(1.05);
-}
+form button:hover { background:var(--color-acento); transform: scale(1.05); }
 
 footer {
   background:var(--color-primario);
@@ -290,20 +266,16 @@ footer {
   <h2>Tratamientos</h2>
   <div class="tratamientos">
     <div class="item" onclick="abrirModal('modal-individual')">
-      <img src="iconos/terapia_individual.png" class="icon" alt="Terapia Individual">
-      <h3>Terapia Individual</h3>
+      <img src="iconos/terapia_individual.png" class="icon" alt="Terapia Individual"><h3>Terapia Individual</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-pareja')">
-      <img src="iconos/terapia_pareja.png" class="icon" alt="Terapia de Pareja">
-      <h3>Terapia de Pareja</h3>
+      <img src="iconos/terapia_pareja.png" class="icon" alt="Terapia de Pareja"><h3>Terapia de Pareja</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-familiar')">
-      <img src="iconos/asesoramiento_familiar.png" class="icon" alt="Asesoramiento Familiar">
-      <h3>Asesoramiento Familiar</h3>
+      <img src="iconos/asesoramiento_familiar.png" class="icon" alt="Asesoramiento Familiar"><h3>Asesoramiento Familiar</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-mindfulness')">
-      <img src="iconos/mindfulness.png" class="icon" alt="Mindfulness">
-      <h3>Mindfulness</h3>
+      <img src="iconos/mindfulness.png" class="icon" alt="Mindfulness"><h3>Mindfulness</h3>
     </div>
   </div>
 </section>
@@ -312,28 +284,22 @@ footer {
   <h2>Talleres</h2>
   <div class="talleres">
     <div class="item" onclick="abrirModal('modal-timidez')">
-      <img src="iconos/timidez1.png" class="icon" alt="Supera la Timidez">
-      <h3>Supera la Timidez</h3>
+      <img src="iconos/timidez1.png" class="icon" alt="Supera la Timidez"><h3>Supera la Timidez</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-pareja-taller')">
-      <img src="iconos/pareja1.png" class="icon" alt="Mejora tu relación de pareja">
-      <h3>Mejora tu relación de pareja</h3>
+      <img src="iconos/pareja1.png" class="icon" alt="Mejora tu relación de pareja"><h3>Mejora tu relación de pareja</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-ruptura')">
-      <img src="iconos/ruptura1.png" class="icon" alt="Supera una ruptura">
-      <h3>Supera una ruptura</h3>
+      <img src="iconos/ruptura1.png" class="icon" alt="Supera una ruptura"><h3>Supera una ruptura</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-ansiedad')">
-      <img src="iconos/ansiedad1.png" class="icon" alt="Aprende a gestionar la ansiedad">
-      <h3>Aprende a gestionar la ansiedad</h3>
+      <img src="iconos/ansiedad1.png" class="icon" alt="Aprende a gestionar la ansiedad"><h3>Aprende a gestionar la ansiedad</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-rallo')">
-      <img src="iconos/rallo1.png" class="icon" alt="Pienso, luego me rallo">
-      <h3>Pienso, luego me rallo</h3>
+      <img src="iconos/rallo1.png" class="icon" alt="Pienso, luego me rallo"><h3>Pienso, luego me rallo</h3>
     </div>
     <div class="item" onclick="abrirModal('modal-valorat')">
-      <img src="iconos/valorat1.png" class="icon" alt="Valora-T">
-      <h3>Valora-T</h3>
+      <img src="iconos/valorat1.png" class="icon" alt="Valora-T"><h3>Valora-T</h3>
     </div>
   </div>
 </section>
@@ -357,100 +323,100 @@ footer {
 </footer>
 
 <!-- MODALES -->
-<div class="modal" id="modal-individual" aria-hidden="true">
+<div id="modal-individual" class="modal" aria-hidden="true">
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-individual')">&times;</span>
-    <img src="imagenes/individual.png" alt="Terapia Individual">
-    <h3>Terapia Individual</h3>
-    <p>Sesiones personalizadas para tu desarrollo emocional.</p>
+    <h2>Terapia Individual</h2>
+    <img src="imagenes/terapia_individual.png" alt="Terapia Individual">
+    <p>Sesiones personalizadas para trabajar tu desarrollo personal y emocional.</p>
   </div>
 </div>
 
-<div class="modal" id="modal-pareja" aria-hidden="true">
+<div id="modal-pareja" class="modal" aria-hidden="true">
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-pareja')">&times;</span>
-    <img src="imagenes/pareja.png" alt="Terapia de Pareja">
-    <h3>Terapia de Pareja</h3>
-    <p>Mejora la comunicación y la conexión en tu relación.</p>
+    <h2>Terapia de Pareja</h2>
+    <img src="imagenes/terapia_pareja.png" alt="Terapia de Pareja">
+    <p>Apoyo profesional para mejorar la comunicación y fortalecer la relación.</p>
   </div>
 </div>
 
-<div class="modal" id="modal-familiar" aria-hidden="true">
+<div id="modal-familiar" class="modal" aria-hidden="true">
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-familiar')">&times;</span>
-    <img src="imagenes/familiar.png" alt="Asesoramiento Familiar">
-    <h3>Asesoramiento Familiar</h3>
-    <p>Apoyo para familias en conflicto o transición.</p>
+    <h2>Asesoramiento Familiar</h2>
+    <img src="imagenes/asesoramiento_familiar.png" alt="Asesoramiento Familiar">
+    <p>Herramientas para resolver conflictos y mejorar la convivencia familiar.</p>
   </div>
 </div>
 
-<div class="modal" id="modal-mindfulness" aria-hidden="true">
+<div id="modal-mindfulness" class="modal" aria-hidden="true">
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-mindfulness')">&times;</span>
+    <h2>Mindfulness</h2>
     <img src="imagenes/mindfulness.png" alt="Mindfulness">
-    <h3>Mindfulness</h3>
-    <p>Aprende técnicas de atención plena y relajación.</p>
+    <p>Técnicas de atención plena para reducir el estrés y mejorar tu bienestar.</p>
   </div>
 </div>
 
-<!-- Talleres -->
-<div class="modal" id="modal-timidez" aria-hidden="true">
+<!-- Talleres popups -->
+<div id="modal-timidez" class="modal" aria-hidden="true">
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-timidez')">&times;</span>
+    <h2>Supera la Timidez</h2>
     <img src="imagenes/timidez.png" alt="Supera la Timidez">
-    <h3>Supera la Timidez</h3>
-    <p>Aprende a relacionarte con confianza y naturalidad.</p>
+    <p>Taller práctico para mejorar la confianza y habilidades sociales.</p>
   </div>
 </div>
 
-<div class="modal" id="modal-pareja-taller" aria-hidden="true">
+<div id="modal-pareja-taller" class="modal" aria-hidden="true">
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-pareja-taller')">&times;</span>
+    <h2>Mejora tu relación de pareja</h2>
     <img src="imagenes/pareja.png" alt="Mejora tu relación de pareja">
-    <h3>Mejora tu relación de pareja</h3>
-    <p>Ejercicios y dinámicas para fortalecer vínculos.</p>
+    <p>Taller para fortalecer la comunicación y resolver conflictos en pareja.</p>
   </div>
 </div>
 
-<div class="modal" id="modal-ruptura" aria-hidden="true">
+<div id="modal-ruptura" class="modal" aria-hidden="true">
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-ruptura')">&times;</span>
+    <h2>Supera una ruptura</h2>
     <img src="imagenes/ruptura.png" alt="Supera una ruptura">
-    <h3>Supera una ruptura</h3>
-    <p>Herramientas para afrontar la separación y seguir adelante.</p>
+    <p>Apoyo emocional y herramientas para afrontar rupturas sentimentales.</p>
   </div>
 </div>
 
-<div class="modal" id="modal-ansiedad" aria-hidden="true">
+<div id="modal-ansiedad" class="modal" aria-hidden="true">
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-ansiedad')">&times;</span>
+    <h2>Aprende a gestionar la ansiedad</h2>
     <img src="imagenes/ansiedad.png" alt="Aprende a gestionar la ansiedad">
-    <h3>Aprende a gestionar la ansiedad</h3>
-    <p>Técnicas prácticas para controlar estrés y ansiedad.</p>
+    <p>Técnicas para controlar la ansiedad y mejorar la calidad de vida.</p>
   </div>
 </div>
 
-<div class="modal" id="modal-rallo" aria-hidden="true">
+<div id="modal-rallo" class="modal" aria-hidden="true">
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-rallo')">&times;</span>
+    <h2>Pienso, luego me rallo</h2>
     <img src="imagenes/rallo.png" alt="Pienso, luego me rallo">
-    <h3>Pienso, luego me rallo</h3>
-    <p>Comprende tus pensamientos y gestiona la preocupación excesiva.</p>
+    <p>Taller para manejar pensamientos intrusivos y mejorar la tranquilidad mental.</p>
   </div>
 </div>
 
-<div class="modal" id="modal-valorat" aria-hidden="true">
+<div id="modal-valorat" class="modal" aria-hidden="true">
   <div class="modal-contenido">
     <span class="cerrar" onclick="cerrarModal('modal-valorat')">&times;</span>
+    <h2>Valora-T</h2>
     <img src="imagenes/valorat.png" alt="Valora-T">
-    <h3>Valora-T</h3>
-    <p>Descubre tu valor personal y aumenta tu autoestima.</p>
+    <p>Taller para aumentar la autoestima y el autoconocimiento.</p>
   </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
-AOS.init({duration:800, offset:120, once:false, mirror:true, startEvent:'DOMContentLoaded'});
+AOS.init({duration:800, offset:120, once:false, mirror:true});
 
 // Pop-ups
 function abrirModal(id){
@@ -468,20 +434,13 @@ window.addEventListener('keydown', e => {
   }
 });
 
-// Header parallax avanzado
+// Header paralaje
 window.addEventListener('scroll', ()=>{
   const parallax=document.querySelector('header img.bg-parallax');
   if(parallax){
-    parallax.style.transform = `translateY(${window.scrollY*0.25}px) scale(${1 + window.scrollY*0.0005})`;
+    parallax.style.transform = `translateY(${window.scrollY*0.3}px)`;
   }
 });
-
-// Reaplicar AOS cuando vuelves a la sección
-document.addEventListener('aos:in:fade-up', ({detail}) => {
-  detail.classList.remove('aos-animate');
-  setTimeout(()=>{ detail.classList.add('aos-animate'); },50);
-});
 </script>
-
 </body>
 </html>
